fix: align black buttons and add thumbs-up emoji after cancelling like

--- a/hanwooplz_project/hanwooplz_app/static/css/question.css
+++ b/hanwooplz_project/hanwooplz_app/static/css/question.css
@@ -81,7 +81,7 @@
 
 .button_list_edit {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: right;
     align-items: center;
     flex-direction: row;
     margin-top: 20px;
@@ -91,6 +91,7 @@
     background-color: #333;
     color: #fff;
     border: none;
+    margin-right: 5px;
     padding: 6px 12px;
     border-radius: 4px;
     font-size: 14px;
